Fixed the styling for the settings page and also switched to a lighter font weight so it's not too cramped

--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 @font-face {
 	font-family: 'dogica';
-	src: url('assets/dogicapixelbold.ttf');
+	src: url('assets/dogicapixel.ttf'); /* CHANGE BACK TO BOLD */
 }
 
 * {
+	cursor: grab;
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
@@ -19,10 +20,28 @@ body {
 	flex-direction: column;
 }
 
+input:hover {
+	cursor: text;
+}
+
+button {
+	padding: 3px;
+}
+button:hover {
+	cursor: pointer;
+}
 .top-nav {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-evenly;
+}
+
+.bottom-nav {
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	padding: 5px 10px;
 }
 
 .icon-container {
@@ -32,8 +51,8 @@ body {
 }
 
 .icon-container img {
-	width: 100%;
-	height: 100%;
+	width: 90%;
+	height: 90%;
 	object-fit: cover;
 	transition: transform 0.3s ease-out;
 }
@@ -55,7 +74,6 @@ body {
 	width: 90px;
 	height: 40px;
 	z-index: 10; /*so it hovers above the head*/
-	cursor: pointer;
 }
 
 .cat-body {
@@ -218,14 +236,6 @@ body {
 	background-image: url('assets/emote/emote-surprised.PNG');
 	background-size: 360px 180px;
 	animation: play-2-infinite 1.2s steps(2) infinite;
-}
-
-.bottom-nav {
-	width: 100%;
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	padding: 5px 10px;
 }
 
 /* Forwards versions */
